--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,8 @@
 {
   "name": "dndmarket-ui",
   "compatibility_date": "2025-12-17",
-  "main": "src/index.ts"
+  "main": "src/main.ts",
+  "assets": {
+    "directory": "./dist"
+  }
 }
