--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:prod": "ng serve --configuration=production",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "pages:deploy": "npm run build && wrangler pages deploy"
   },
   "prettier": {
     "printWidth": 100,
