--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "pages:deploy": "npm run build && wrangler pages deploy --config wrangler.toml"
+    "pages:deploy": "npm run build && wrangler pages deploy dist/dndMarket-ui --project-name=dndmarket-ui"
   },
   "prettier": {
     "printWidth": 100,
