--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
 name = "dndmarket-ui"
 compatibility_date = "2024-05-12"
 
+[assets]
+directory = "dist/dndMarket-ui"
+
 [dev]
 command = "npm run start"
 port = 4200
