--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,18 @@ directory = "dist/dndMarket-ui"
 [dev]
 command = "npm run start"
 port = 4200
+
+[observability]
+enabled = false
+head_sampling_rate = 1
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
