--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,10 @@ compatibility_date = "2024-05-12"
 [assets]
 directory = "dist/dndMarket-ui"
 
+[[routes]]
+pattern = "dnd-market.omnomnom.org/*"
+zone_name = "omnomnom.org"
+
 [dev]
 command = "npm run start"
 port = 4200
