--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@ name = "dndmarket-ui"
 compatibility_date = "2024-05-12"
 
 [assets]
-directory = "dist/dndMarket-ui"
+directory = "dist/dndMarket-ui/browser"
 
 [[routes]]
 pattern = "dnd-market.omnomnom.org/*"
