--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --configuration=development",
     "start:prod": "ng serve --configuration=production",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "pages:deploy": "npm run build && wrangler pages deploy dist/dndMarket-ui/browser --project-name=dndmarket-ui"
