--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,28 +1,3 @@
 name = "dndmarket-ui"
 compatibility_date = "2024-05-12"
-
-[assets]
-directory = "dist/dndMarket-ui/browser"
-
-[[routes]]
-pattern = "dnd-market.omnomnom.org/*"
-zone_name = "omnomnom.org"
-
-[dev]
-command = "npm run start"
-port = 4200
-
-[observability]
-enabled = false
-head_sampling_rate = 1
-
-[observability.logs]
-enabled = true
-head_sampling_rate = 1
-persist = true
-invocation_logs = true
-
-[observability.traces]
-enabled = false
-persist = true
-head_sampling_rate = 1
+pages_build_output_dir = "dist/dndMarket-ui/browser"
