--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:prod": "ng serve --configuration=production",
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --coverage",
     "pages:deploy": "npm run build && wrangler pages deploy dist/dndMarket-ui/browser --project-name=dndmarket-ui",
     "pages:dev": "wrangler pages dev dist/dndMarket-ui/browser"
   },
@@ -32,6 +32,7 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
