--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,8 +10,7 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
 sonar.exclusions=**/*.spec.ts
-
-sonar.test.inclusions=**/*.spec.ts
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
