--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,8 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
-sonar.exclusions=**/*.spec.ts
+sonar.exclusions=**/node_modules/**,src/main.ts,**/*.spec.js,public/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
+sonar.test.inclusions=**/*.spec.ts
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
