--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --coverage",
+    "test:ci": "ng test --watch=false --code-coverage",
     "pages:deploy": "npm run build && wrangler pages deploy dist/dndMarket-ui/browser --project-name=dndmarket-ui",
-    "pages:dev": "wrangler pages dev dist/dndMarket-ui/browser"
+    "pages:dev": "wrangler pages dev dist/dndMarket-ui/browser",
+    "sonar": "sonar-scanner"
   },
   "prettier": {
     "printWidth": 100,
@@ -33,6 +35,8 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@vitest/coverage-v8": "^4.0.18",
+    "karma-coverage": "^2.2.1",
+    "karma-junit-reporter": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
