--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --coverage",
-    "test:ci": "ng test --watch=false --code-coverage",
+    "test:ci": "ng test --watch=false --coverage",
     "pages:deploy": "npm run build && wrangler pages deploy dist/dndMarket-ui/browser --project-name=dndmarket-ui",
     "pages:dev": "wrangler pages dev dist/dndMarket-ui/browser",
     "sonar": "sonar-scanner"
