--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -26,13 +26,26 @@ jobs:
   testJob:
     name: Test
     runs-on: ubuntu-latest
+    needs: buildJob
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install --ignore-scripts
       - name: Test
         run: npm run test:ci
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
+    needs: testJob
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v6
         env:
