Removed spec inclusion

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=**/*.spec.ts
+sonar.test.inclusions=
 sonar.exclusions=**/node_modules/**,src/main.ts,**/*.spec.ts,public/**
 sonar.javascript.lcov.reportPaths=coverage/dnd-market-ui/lcov.info
 
