--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,8 +10,8 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=
-sonar.exclusions=**/node_modules/**,src/main.ts,**/*.spec.ts,public/**,**/models/*model.ts
+sonar.test.inclusions=**/*.spec.ts
+sonar.exclusions=**/node_modules/**,src/main.ts,public/**,**/models/*.model.ts
 sonar.javascript.lcov.reportPaths=coverage/dnd-market-ui/lcov.info
 
 # Encoding of the source code. Default is default system encoding
