--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.projectVersion=1.0
 sonar.sources=src
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=**/node_modules/**,src/main.ts,public/**,**/models/*.model.ts
+sonar.exclusions=**/node_modules/**,src/main.ts,public/**
 sonar.javascript.lcov.reportPaths=coverage/dnd-market-ui/lcov.info
 
 # Encoding of the source code. Default is default system encoding
